--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "vim": "^0.1.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
